--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/go?characterEncoding=utf8
+    url: jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf8
     username: root
     password: 123456
     #最大活跃数
